phpsample/argo_deployment-linode/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpdemo-deployment
  namespace: phpdemo
  labels:
    app: phpdemo
spec:
  replicas: 10
  selector:
    matchLabels:
      app: phpdemo
  template:
    metadata:
      labels:
        app: phpdemo
    spec:
      containers:
        - name: phpdemo
          image: albertoclarit/phpdemo:1.0.4
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
                - name: X-Custom-Header
                  value: Awesome
            initialDelaySeconds: 15
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 20
          livenessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
                - name: X-Custom-Header
                  value: Awesome
            initialDelaySeconds: 15
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 20
