phpsample/argo_deployment-linode/nginx-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: phpdemo-ingress
  namespace: phpdemo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: phpdemo.172.104.38.71.nip.io
      http:
        paths:
          - backend:
              serviceName: phpdemo-service
              servicePort: 80
